@@ -33,6 +33,8 @@ version 2.6.0 (??/??/2009):
 	* Support showing and reporting idle times in the buddy list. (XEP-0256)
 	* Support most recent version of User Avatar. (XEP-0084 v1.1)
 	* Updated Entity Capabilities support. (Tobias Markmann)
+	* Support receiving user nicknames in presence packets and subscriptions.
+	  (XEP-0172)
 
 	IRC:
 	* Correctly handle WHOIS for users who are joined to a large number of
